# NoteSyncpp

./: CMakeLists.txt
src/: main.cpp
src/FilesWorkOn/: CMakeLists.txt  filesWorkOn.cpp  filesWorkOn.hpp
src/Time/: CMakeLists.txt  time.cpp  time.hpp
